# finam_hotel_reviews

./: .gitignore  .pdm-python  README.md  pyproject.toml  requirements.txt  solution.md
configs/: .env.example
data/interim/: 200_labeled_gpt_4.csv  200_labeled_gpt_4.xlsx  5_samples.xlsx
notebooks/: 00_first_small_eda.ipynb  01_cleaning_lemmatizaton.ipynb  02_process_embedding.ipynb  03_clustering_analyses.ipynb  05_absa_01.ipynb  06_absa_02.ipynb  07_absa_03_deepseek_v1.ipynb  07_absa_03_deepseek_v2.ipynb
reports/html/: 01_cleaning_lemmatizaton.html  02_process_embedding.html  05_absa_01.html  06_absa_02.html
reports/ipynb/: 01_cleaning_lemmatizaton.ipynb  02_process_embedding.ipynb
